Kod/wandb/run-20240419_120324-bwry7wr9/files/output.log
GPU dostępne: NVIDIA GeForce RTX 3090
/media/cal314-1/9E044F59044F3415/Marcin/noisy_labels/Dataset/SegSperm/test
(119, 512, 512)
Mean IoU oneclass (intersection): 0.551397735620119
IoU per class oneclass (intersection): [0.99597141 0.55139774]
Mean IoU multiclass (intersection): 0
IoU per class multiclass (intersection): 0
Mean IoU oneclass (annotator1): 0.5966899019630684
IoU per class oneclass (annotator1): [0.99538833 0.5966899 ]
Mean IoU multiclass (annotator1): 0
IoU per class multiclass (annotator1): 0
Mean IoU oneclass (annotator2): 0.5213064201328608
IoU per class oneclass (annotator2): [0.99493943 0.52130642]
Mean IoU multiclass (annotator2): 0
IoU per class multiclass (annotator2): 0
Mean IoU oneclass (union): 0.5663678489232027
IoU per class oneclass (union): [0.99435355 0.56636785]
Mean IoU multiclass (union): 0
IoU per class multiclass (union): 0
Mean IoU oneclass (feeling lucky): 0.5572782292761389
IoU per class oneclass (feeling lucky): [0.99515359 0.55727823]
Mean IoU multiclass (feeling lucky): 0
IoU per class multiclass (feeling lucky): 0
Traceback (most recent call last):
  File "/media/cal314-1/9E044F59044F3415/Marcin/noisy_labels/Kod/inference.py", line 607, in <module>
    predict(model, test_loader)
  File "/media/cal314-1/9E044F59044F3415/Marcin/noisy_labels/Kod/inference.py", line 520, in predict
    optimal_threshold_multiclass,optimal_iou_multiclass,optimal_threshold_oneclass,optimal_iou_oneclass = calculate_optimal_threshold(true_masks,soft1, soft2,pred1,saved_model_name+'_')
                                                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/media/cal314-1/9E044F59044F3415/Marcin/noisy_labels/Kod/inference.py", line 280, in calculate_optimal_threshold
    cv2.imwrite(os.path.join(folder_path, f'{i}.png'), img)
cv2.error: OpenCV(4.9.0) /io/opencv/modules/imgcodecs/src/loadsave.cpp:703: error: (-215:Assertion failed) image.channels() == 1 || image.channels() == 3 || image.channels() == 4 in function 'imwrite_'